changed skill cards and changed site title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Minimal Resume Template</title>
+	<title>Mac Kiser - Resume</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -76,38 +76,38 @@ for startups and large companies</h2>
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
-				<h2>60</h2>
+				<h2>2K</h2>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Projects</h3>
-				<span>Adapting and creating solutions for customer's needs</span>
+				<h3>Database Entries</h3>
+				<span>Editing and submmitting detailed mapping information using GeoJSON</span>
 			</div>
 		</div>
 
 
 		<div class="card">
 			<div class="skill-level">
-				<h2>50</h2>
+				<h2>40</h2>
 				<span>%</span>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Web</h3>
-				<span>Applications development integrating third-party services and mobile client(s)</span>
+				<h3>Hardware/Software Management</h3>
+				<span>Seamlessly keeping all systems up to date and running smoothly</span>
 			</div>
 		</div>
 
 
 		<div class="card">
 			<div class="skill-level">
-				<h2>30</h2>
+				<h2>40</h2>
 				<span>%</span>
 			</div>
 
 			<div class="skill-meta">
 				<h3>Technical solutions</h3>
-				<span>Such as web services, scripts, configurations</span>
+				<span>Basic IT helpdesk support for clients/coworkers</span>
 			</div>
 		</div>
 
@@ -119,8 +119,8 @@ for startups and large companies</h2>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Leading</h3>
-				<span>Web projects and ensure the quality of delivery</span>
+				<h3>Web Development</h3>
+				<span>Basic front-end web design using HTML and CSS</span>
 			</div>
 		</div>
 
@@ -144,7 +144,7 @@ for startups and large companies</h2>
 		    <p class="description">
 		      United States Naval Academy
 		    </p>
-		    <span class="date">Jun. 2015 - Jul. 2015</span>
+		    <span class="date">Jun. 2013 - Jul. 2013</span>
 		  </li>
 
 		  		  <li>
