--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 			<span class="job-title">Information Systems</span>
 			<span class="email">mkiser96@gmail.com</span>
 
-			<h2 class="lead">Development and design of web applications
-for startups and large companies</h2>
+			<h2 class="lead">IT and basic web design help for large businesses and startups</h2>
 		</div>
 	</div>
 
