edited lead header, skills, interests, and past employment experiences

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mac Kiser - Resume</title>
+	<title>McKinley Kiser - Resume</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -11,9 +11,11 @@
 		<div class="hero">
 			<h1 class="name"><strong>McKinley</strong> Kiser</h1>
 			<span class="job-title">Information Systems</span>
+			<span class="email">College Student</span>
 			<span class="email">mkiser96@gmail.com</span>
+			<span class="email">+1 (443)-812-2926</span>
 
-			<h2 class="lead">IT and basic web design help for large businesses and startups</h2>
+			<h2 class="lead">Hardworking, resourceful, and adaptable student looking to provide services with 4+ years of experience in database management, network security, front-end web design, and general computer knowledge.</h2>
 		</div>
 	</div>
 
@@ -22,6 +24,14 @@
 
 		<div class="sections">
 			<h2 class="section-title">Skills</h2>
+
+			<div class="list-card">
+				<span class="exp">+ 3 years</span>
+				<div>
+					<h3>Database Administration</h3>
+					<span>Access, SQL, GeoJSON</span>
+				</div>
+			</div>
 
 			<div class="list-card">
 				<span class="exp">+ 5 years</span>
@@ -65,17 +75,26 @@
 						<span>Hardware/Software Upgrades, Web/Email servers</span>
 					</div>
 				</div>
+
+				<div class="list-card">
+					<div>
+						<h3>Cloud Computing</h3>
+						<span>Google Cloud, AWS, Azure</span>
+					</div>
+				</div>
 		</div>
 	</div>
 
 	<!-- Achievements -->
+	<br />
+	<br />
 
 	<div class="container cards">
 
 		<div class="card">
 			<div class="skill-level">
 				<span>+</span>
-				<h2>2K</h2>
+				<h2>5K</h2>
 			</div>
 
 			<div class="skill-meta">
@@ -133,7 +152,7 @@
 		    <p class="line">Experiences</p>
 		    <span class="point"></span>
 		    <p class="description">
-		      Miss Utility Coordinator @Comcast
+		      Miss Utility Database Administrator @Comcast
 		    </p>
 		    <span class="date">Today - Mar. 2017</span>
 		  </li>
