changed email to a link and added a hover effect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>McKinley Kiser - Resume</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="css/hover-min.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,8 +12,8 @@
 		<div class="hero">
 			<h1 class="name"><strong>McKinley</strong> Kiser</h1>
 			<span class="job-title">Information Systems</span>
-			<span class="email">College Student</span>
-			<span class="email">mkiser96@gmail.com</span>
+			<span class="occupation">College Student</span>
+			<span class="email hvr-forward"><a href="mailto:mkiser96@gmail.com">mkiser96@gmail.com</a></span>
 			<span class="email">+1 (443)-812-2926</span>
 
 			<h2 class="lead">Hardworking, resourceful, and adaptable student looking to provide services with 4+ years of experience in database management, network security, front-end web design, and general computer knowledge.</h2>
